Split up javascript code, add babel polyfills, new color and coat pattern

--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -65,6 +65,15 @@
   }
 }
 
+.select-wrapper {
+  svg {
+    position: absolute;
+    right: 5px;
+    bottom: 10px;
+  }
+}
+
+
 .home-landing, .kittens-landing {
   .btn-large {
     background: $primaryColor !important;
