--- a/app/javascript/stylesheets/modules/show.scss
+++ b/app/javascript/stylesheets/modules/show.scss
@@ -8,7 +8,8 @@
   }
 
   img {
-    border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     box-shadow: $z-depth-2;
   }
 
@@ -387,6 +388,10 @@
 }
 
 // Card filter icon
+.overflow-visible {
+  overflow: visible !important;
+}
+
 .filter-icon-container {
   display: none;
   position: absolute;
