Add region to users

--- a/app/javascript/stylesheets/modules/cattery.scss
+++ b/app/javascript/stylesheets/modules/cattery.scss
@@ -1,5 +1,10 @@
 // Cattery overview
 .cattery-overview, #cattery-view {
+  .subtitle {
+    font-size: 2em;
+    margin-top: 0;
+  }
+
   h3 {
     font-weight: bold;
     margin: 0;
