--- a/app/javascript/stylesheets/modules/form.scss
+++ b/app/javascript/stylesheets/modules/form.scss
@@ -294,7 +294,7 @@
     }
   }
 
-  .fixed-text-ajax {
+  .fixed-text-label {
     position: relative;
 
     @include small-and-up {
@@ -302,7 +302,8 @@
     }
   
     b {
-      font-size: 1.1em;
+      font-size: 1em;
+      text-transform: uppercase;
     }
   }
 
