--- a/app/javascript/stylesheets/modules/show.scss
+++ b/app/javascript/stylesheets/modules/show.scss
@@ -7,6 +7,12 @@
     }
   }
 
+  .location-stamp {
+    font-size: 1.6em;
+    text-transform: uppercase;
+    margin: 0 0 1.68rem 0 !important;
+  }
+
   img {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
