--- a/app/views/pairs/_form.html.erb
+++ b/app/views/pairs/_form.html.erb
@@ -25,7 +25,7 @@
   <div class="row">
     <div class="col s12">
       <div class="actions">
-        <%= f.button class:"btn-large waves-effect waves-light", type:"submit", name:"form", value: @form do %>
+        <%= f.button class:"btn-large waves-effect", type:"submit", name:"form", value: @form do %>
           <% if @pair.new_record? %>
             <%= t('buttons.create') %>
           <% else %>
@@ -40,7 +40,7 @@
 
   <div class="row">
     <div class="col">
-      <%= link_to overview_cattery_path(@user), class:"waves-effect waves-light btn left" do %>
+      <%= link_to overview_cattery_path(@user), class:"waves-effect btn left" do %>
         <i class="material-icons left">keyboard_arrow_left</i>
         <%= t('buttons.back') %>
       <% end %>
@@ -48,7 +48,7 @@
     <% if !@pair.new_record? %>
     <div class="col right">
       <% if pair_litters_count(@pair, @user) == 0 and pair_kittens_count(@pair, @user) == 0 %>
-        <a class="btn waves-effect waves-light btn-delete modal-trigger" href="#modal-delete">
+        <a class="btn waves-effect btn-delete modal-trigger" href="#modal-delete">
           <span><%= t('buttons.delete') %></span>
           <i class="material-icons right">delete</i>
         </a>
@@ -59,17 +59,17 @@
             <p><%= t('modal.this_action_is_permanent') %>!</p>
           </div>
           <div class="modal-footer">
-            <a class="btn waves-effect waves-light modal-close btn-cancel">
+            <a class="btn waves-effect modal-close btn-cancel">
              <%= t('words.cancel') %>
             </a>
-            <%= link_to pair_path(@pair, form: @form), class:"btn waves-effect waves-light btn-confirm", method: :delete do %>
+            <%= link_to pair_path(@pair, form: @form), class:"btn waves-effect btn-confirm", method: :delete do %>
               <%= t('words.im_sure') %>
             <% end %>
           </div>
         </div>
       <% else %>
         <%= link_to "javascript:void(0)", class:"btn disabled-tooltip-wrapper tooltipped", data: { position:"bottom", tooltip: t('cattery_overview.tooltip.delete_pair_condition') } do %>
-          <button class="btn waves-effect waves-light btn-delete disabled tooltipped">
+          <button class="btn waves-effect btn-delete disabled tooltipped">
             <span><%= t('buttons.delete') %></span>
             <i class="material-icons right">delete</i>
           </button>
