Add Bengal and Chartreux breeds texts

--- a/app/javascript/stylesheets/modules/index.scss
+++ b/app/javascript/stylesheets/modules/index.scss
@@ -43,7 +43,7 @@
   }
 }
 
-.kittens-index, .catteries-index, .breeds-index, .cattery-overview {
+.kittens-index, .catteries-index, .breeds-index, #kitten-view, .cattery-overview {
   // Preloader
   .preloader-wrapper {
     // display: none;
