--- a/app/views/breeds/index.html.erb
+++ b/app/views/breeds/index.html.erb
@@ -1,5 +1,5 @@
 <!-- Page specific meta data -->
-<% content_for :meta_title, "#{DEFAULT_META["meta_title"]} | Breeds" %>
+<% content_for :meta_title, "#{t('header.breeds')} | #{DEFAULT_META["meta_title"]}" %>
 
 <div class="container breeds-index">
   <div class="row">
