--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, "#{DEFAULT_META["meta_title"]} | Kittens" %>
+<% content_for :meta_title, "Kittens | #{DEFAULT_META["meta_title"]}" %>
 
 <div class="kittens-index">
   <h1><%= t('header.kittens') %></h1>
