--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, "#{DEFAULT_META["meta_title"]} | Catteries" %>
+<% content_for :meta_title, "Catteries | #{DEFAULT_META["meta_title"]}" %>
 
 <div class="catteries-index">
   <h1><%= t('header.catteries') %></h1>
