--- a/app/views/breeds/show.html.erb
+++ b/app/views/breeds/show.html.erb
@@ -1,5 +1,5 @@
 <!-- Page specific meta data -->
-<% content_for :meta_title, "#{DEFAULT_META["meta_title"]} | #{t("breeds.#{Breed.find(@breed.id).breed_code}.name")}" %>
+<% content_for :meta_title, "#{t("breeds.#{Breed.find(@breed.id).breed_code}.name")} | #{DEFAULT_META["meta_title"]}" %>
 <% content_for :meta_description, t('meta.show_breed', breed_name: t("breeds.#{Breed.find(@breed.id).breed_code}.name")) %>
 <% content_for :meta_facebook_image, "#{url_for(@breed.facebook_thumbnail)}" %>
 <% content_for :meta_twitter_image, "#{url_for(@breed.twitter_thumbnail)}" %>
