--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, "#{DEFAULT_META["meta_title"]} | #{t("breeds.#{Breed.find(@cat.breed_id).breed_code.upcase}.name")} kitten | #{cat_location(@cat)}" %>
+<% content_for :meta_title, "#{t("breeds.#{Breed.find(@cat.breed_id).breed_code.upcase}.name")} kitten | #{cat_location(@cat)} | #{DEFAULT_META["meta_title"]}" %>
 <% content_for :meta_description, t('meta.show_kitten', cat_breed: t("breeds.#{Breed.find(@cat.breed_id).breed_code.upcase}.name"), cat_gender: cat_gender(@cat), cattery: cattery(@cat).cattery_name, cat_birth_date: format_birth_date(@cat), cat_location: cat_location(@cat)) %>
 <% content_for :meta_facebook_image, "#{url_for(@cat.facebook_thumbnail)}" %>
 <% content_for :meta_twitter_image, "#{url_for(@cat.twitter_thumbnail)}" %>
@@ -117,7 +117,7 @@
       <div class="pictures-parents-container">
         <div class="col s12 m5 offset-m1">
           <div class="picture-parent-container"> 
-            <%= image_tag(cat_father(@cat).square, :alt => "father") %>
+            <%= image_tag(cat_father(@cat).square, alt: "father", class:"materialboxed") %>
           </div>
           <div class="parent-info">
             <h3><%= capitalized_name(cat_father(@cat)) %></h3>
@@ -160,7 +160,7 @@
         </div>
         <div class="col s12 m5">
           <div class="picture-parent-container"> 
-            <%= image_tag(cat_mother(@cat).square, :alt => "mother") %>
+            <%= image_tag(cat_mother(@cat).square, alt: "mother", class:"materialboxed") %>
           </div>
           <div class="parent-info">
             <h3><%= capitalized_name(cat_mother(@cat)) %></h3>
