--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
 <div class="section breeds-landing">
   <div class="container">
     <div class="row">  
-    <h1><%= t('home.popular_breeds') %></h1>
+      <h1><%= t('home.popular_breeds') %></h1>
       <div class="carousel">
         <% @breeds.each do |breed| %>
         <div class="carousel-item">
@@ -46,6 +46,12 @@
           </div>
         <% end %>        
       </div>
+    </div>
+    <div class="row btn-wrapper">
+      <%= link_to breeds_path, class:"waves-effect btn-large" do %>
+        <%= t('buttons.see_all_breeds') %>
+        <i class="fas fa-stream"></i>
+      <% end %>
     </div>
   </div>
 </div>
@@ -93,10 +99,10 @@
         <% end %>
       </div>
       <div class="row btn-wrapper">
-      <%= link_to cats_path, class:"waves-effect btn-large" do %>
-        <%= t('buttons.see_all_kittens') %>
-        <i class="fas fa-cat"></i>
-      <% end %>
+        <%= link_to cats_path, class:"waves-effect btn-large" do %>
+          <%= t('buttons.see_all_kittens') %>
+          <i class="fas fa-cat"></i>
+        <% end %>
       </div>
     </div>
   </div>
