--- a/app/views/breeds/show.html.erb
+++ b/app/views/breeds/show.html.erb
@@ -84,9 +84,7 @@
     <%= render 'shared/social_media_share_buttons' %>
   </div>
 
-  <div class="disclaimer-block">  
-    <div class="row">
-      <p><b><%= t('breed_info.disclaimer').upcase %>:</b>&nbsp;<%= t('breed_info.disclaimer_text') %></p>
-    </div>
+  <div class="disclaimer-block z-depth-1">  
+    <p><b><%= t('breed_info.disclaimer').upcase %>:</b> <%= t('breed_info.disclaimer_text') %></p>
   </div>
 </div>
