Add help index and What is Cat Linker guide

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import 'modules/index';
 @import 'modules/show';
 @import 'modules/cattery';
+@import 'modules/help';
 @import 'modules/legal';
 @import 'modules/error';
 @import 'modules/mailer';
