--- a/app/javascript/stylesheets/critical.scss
+++ b/app/javascript/stylesheets/critical.scss
@@ -13,6 +13,7 @@
 @import 'modules/index';
 @import 'modules/show';
 @import 'modules/cattery';
+@import 'modules/help';
 @import 'modules/legal';
 @import 'modules/error';
 @import 'modules/mailer';
