--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -451,3 +451,21 @@
     top: 5px;
   }
 }
+
+// Buy me a coffee
+.bmc-button img {
+  height: 34px !important;
+  width: 35px !important;
+  margin-bottom: 1px !important;
+  box-shadow: none !important;
+  border: none !important;
+  position: relative;
+  top: 10px !important;
+  right: 10px !important;
+}
+
+.bmc-landing {
+  p {
+    font-size: 1.5em;
+  }
+}
