--- a/app/views/help/what_is_catlinker.html.erb
+++ b/app/views/help/what_is_catlinker.html.erb
@@ -15,26 +15,65 @@
 
   <div class="container">
     <div class="row">
-      <h1><%= t('help.what_is_catlinker_page.advantages') %></h1>
+      <h1><%= t('help.what_is_catlinker_page.features') %></h1>
+    </div>
+    <div class="row">
+      <div class="features-wrapper z-depth-1">
+        <table>
+          <tr>
+            <td><span class="material-icons">done</span></td> 
+            <td><%= t('help.what_is_catlinker_page.feature.personal_page') %></td>
+          </tr>
+          <tr>
+            <td><span class="material-icons">done</span></td> 
+            <td><%= t('help.what_is_catlinker_page.feature.add_parents') %></td>
+          </tr>
+          <tr>
+            <td><span class="material-icons">done</span></td> 
+            <td><%= t('help.what_is_catlinker_page.feature.add_kittens') %></td>
+          </tr>
+          <tr>
+            <td><span class="material-icons">done</span></td> 
+            <td><%= t('help.what_is_catlinker_page.feature.easy_tracking') %></td>
+          </tr>
+          <tr>
+            <td><span class="material-icons">done</span></td> 
+            <td><%= t('help.what_is_catlinker_page.feature.social_media') %></td>
+          </tr>
+          <tr>
+            <td><span class="material-icons">done</span></td> 
+            <td><%= t('help.what_is_catlinker_page.feature.responsive') %></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <div class="row">
+      <h1><%= t('help.what_is_catlinker_page.extras') %></h1>
     </div>
     <div class="row">
       <div class="col s12 l4">
-        <div class="card-panel">
-          <i class="far fa-lightbulb"></i>
+        <div class="extra-wrapper">
+          <div class="extra-icon"> 
+            <i class="far fa-lightbulb"></i>
+          </div>
           <h2><%= t('help.what_is_catlinker_page.user_friendly') %></h2>
           <p><%= t('help.what_is_catlinker_page.user_friendly_text') %></p>
         </div>
       </div>
       <div class="col s12 l4">
-        <div class="card-panel">
-          <i class="fab fa-searchengin"></i>
+        <div class="extra-wrapper">
+          <div class="extra-icon"> 
+            <i class="fab fa-searchengin"></i>
+          </div>
           <h2><%= t('help.what_is_catlinker_page.easy_to_find')%></h2>
           <p><%= t('help.what_is_catlinker_page.easy_to_find_text')%></p>
         </div>
       </div>
       <div class="col s12 l4">
-        <div class="card-panel">
-          <i class="fas fa-globe-europe"></i>
+        <div class="extra-wrapper">
+          <div class="extra-icon"> 
+            <i class="fas fa-globe-europe"></i>
+          </div>
           <h2><%= t('help.what_is_catlinker_page.multi_lingual')%></h2>
           <p><%= t('help.what_is_catlinker_page.multi_lingual_text')%></p>
         </div>
