--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -168,6 +168,7 @@
             <ul>
               <li><%= link_to help_path, class:"grey-text text-lighten-3" do %><%= t('footer.help') %><% end %></li>
               <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/catfactday/" target="_blank">Instagram</a></li>
+              <li><a class="grey-text text-lighten-3" target="_blank" href="https://www.buymeacoffee.com/catlinker"><%= t('buttons.buy_me_a_coffee') %></a></li>
               <li><%= link_to t('footer.contact'), contact_path(@support), class:"grey-text text-lighten-3" %></li>
             </ul>
           </div>
